# cognexus-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml
examples/: protected_inference.py
src/cognexus/: __init__.py  _helpers.py  _quickstart_live_demo.py.tpl  cli.py  cloud.py  destructive_action_guard.py  events.py  kill_switch.py  prompt_defense.py  prompt_injection.py
tests/: conftest.py  test_api_key_integration.py  test_cli_quickstart.py  test_cloud.py  test_destructive_action_guard.py  test_kill_switch.py  test_prompt_defense.py  test_prompt_injection.py
tests/fixtures/: __init__.py  threat_prompts.py
