[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognexus"
version = "0.1.0"
description = "OWASP-aligned LLM prompt defence, injection detection, and audit logging"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
    "llm",
    "security",
    "prompt-injection",
    "prompt-defense",
    "owasp",
    "ai-safety",
    "audit",
    "guardrails",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Zero mandatory runtime dependencies — pure stdlib.
dependencies = []

[project.optional-dependencies]
# Required only if you load custom detection patterns from YAML files via
# load_prompt_injection_config().
yaml = ["pyyaml>=6.0"]

dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "build",
    "twine",
    "pyyaml>=6.0",
]

[project.urls]
Homepage    = "https://github.com/CogNexusLabs/cognexus"
Source      = "https://github.com/CogNexusLabs/cognexus"
Issues      = "https://github.com/CogNexusLabs/cognexus/issues"
Changelog   = "https://github.com/CogNexusLabs/cognexus/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/cognexus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
